feat: Kafka 컨슈머 및 Redis 로깅 추가 및 스케줄러 가시성 개선
- Kafka 메시지 수신 및 처리 실패 시 상세 로그 추가
- Redis 데이터 조회 및 저장 단계에서 디버깅용 로깅 세부화
- Stream 분석 단계별 로직에 정보 로그 추가로 처리 흐름 가시성 향상
- @EnableScheduling 추가로 스케줄러 활성화 및 관련 상태 로그 출력